Compile error box + dark mode fixes

--- a/public/assets/scss/_aside.scss
+++ b/public/assets/scss/_aside.scss
@@ -10,7 +10,7 @@ aside {
 		width: 100%;
 		height: 50px;
 		background: white;
-		box-shadow: 0 0 10px rgba(black, 0.1);
+		box-shadow: 0 0 5px rgba(black, 0.1);
 		position: absolute;
 		top: 0; left: 0;
 		z-index: 10;
@@ -32,11 +32,19 @@ aside {
 			cursor: pointer;
 			position: relative;
 			&:hover {
-				background: $grey;
+				background: $grey + 5;
 			}
 			&.active {
 				background: $grey;
 				cursor: default;
+				&:after {
+					content: "";
+					width: 100%;
+					height: 7px;
+					background: $grey;
+					position: absolute;
+					bottom: -3px; left: 0;
+				}
 			}
 			span {
 				width: 100%;
@@ -65,11 +73,11 @@ aside {
 		cursor: pointer;
 		&:before {
 			content: "";
-			width: 4px;
-			height: 4px;
-			background: $grey - 30;
+			width: 3px;
+			height: 3px;
+			background: $dark;
 			border-radius: 100%;
-			box-shadow: 0 -6px 0 0px $grey - 30, 0 6px 0 0px $grey - 30;
+			box-shadow: 0 -5px 0 0px $dark, 0 5px 0 0px $dark;
 			position: absolute;
 			top: 50%; left: 50%;
 			transform: translate(-50%, -50%);
@@ -77,7 +85,7 @@ aside {
 		&:hover, &.open {
 			&:before {
 				background: $dark - 30;
-				box-shadow: 0 -6px 0 0px $dark - 30, 0 6px 0 0px $dark - 30;
+				box-shadow: 0 -5px 0 0px $dark - 30, 0 5px 0 0px $dark - 30;
 			}
 		}
 		&.open {
@@ -88,7 +96,7 @@ aside {
 			}
 		}
 		form {
-			width: 300px;
+			width: 340px;
 			background: white;
 			box-shadow: 0 0 50px rgba(black, 0.1);
 			position: absolute;
@@ -97,7 +105,7 @@ aside {
 			transform: scale(0);
 			visibility: hidden;
 			opacity: 0;
-			transform-origin: 300px -50px;
+			transform-origin: 340px -50px;
 			transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out, transform 0.2s ease-in-out;
 			&:before {
 				content: "";
@@ -112,24 +120,27 @@ aside {
 			fieldset {
 				padding: 20px;
 				border-bottom: 1px solid $grey - 10;
+				&:last-of-type {
+					border-bottom: none;
+				}
 				label {
 					display: inline-block;
 					font-weight: 700;
 					-webkit-user-select: none;
 				}
 				textarea {
-					width: 240px;
-					height: 80px;
+					width: 300px;
+					height: 100px;
 					color: inherit;
 					background: transparent;
 					border: 1px solid $grey - 10;
-					border-radius: 4px;
 					outline: none;
 					font-family: inherit;
-					font-size: 12px;
+					font-size: 11px;
 					display: block;
 					margin-top: 5px;
 					padding: 10px;
+					white-space: pre;
 					resize: none;
 				}
 				div {
@@ -176,6 +187,22 @@ aside {
 		}
 		&.inactive {
 			transform: translateY(100%);
+		}
+		footer {
+			display: none;
+			width: calc(100% - 60px);
+			background: $red;
+			box-shadow: 0 0 10px rgba(black, 0.1);
+			color: white;
+			padding: 10px;
+			position: absolute;
+			bottom: 30px; left: 30px;
+			z-index: 10;
+		}
+		&.error {
+			footer {
+				display: block;
+			}
 		}
 	}
 }
