--- a/public/assets/scss/_base.scss
+++ b/public/assets/scss/_base.scss
@@ -4,6 +4,7 @@ $blue: 		#2196F3;
 $pink: 		#E91E63;
 $green: 	#4CAF50;
 $orange: 	#FFC107;
+$red:		#F44336;
 
 html {
 	box-sizing: border-box;
